--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "src/assets/scripts/mp.js"
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
