--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.4",
+    "@mercadopago/sdk-react": "^0.0.19",
+    "@types/mercadopago-sdk-js": "^2.0.17",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
