--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,36 @@
-server {
-    listen 80;
+# Configuración global
+worker_processes 1;  # Número de procesos de trabajo
+events {}
 
-    server_name localhost;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location / {
-        root /usr/share/nginx/html/app/borwser;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
+    
+
+    # Servir archivos estáticos con las mejores prácticas
+    server {
+        listen 80;
+        server_name localhost;
+
+        # Configuración de los archivos estáticos
+        location / {
+            root /usr/share/nginx/html/app/browser;  # Asegúrate de que esta ruta sea correcta
+            index index.html index.htm;
+            
+            # Si no se encuentra el archivo, redirige al index.html (para SPA)
+            try_files $uri $uri/ /index.html;
+        }
+
+      
+        
+        
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
+
+        location = /404.html {
+            root /usr/share/nginx/html;
+        }
     }
 }
