--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,17 @@
-# Configuración global
-worker_processes 1;  # Número de procesos de trabajo
+worker_processes 1;
+
 events {}
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
     # Servir archivos estáticos con las mejores prácticas
     server {
         listen 80;
         server_name localhost;
 
-        # Configuración de los archivos estáticos
+        # Ruta para los archivos estáticos
         location / {
             root /usr/share/nginx/html/app/browser;  # Asegúrate de que esta ruta sea correcta
             index index.html index.htm;
@@ -22,9 +20,13 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-      
-        
-        
+        # Agregar un bloque específico para favicon.ico
+        location = /favicon.ico {
+            root /usr/share/nginx/html/app/browser;  # Ruta de tu favicon
+            try_files $uri =404;  # Asegúrate de que favicon.ico exista o redirige a 404
+        }
+
+        # Servir errores 50x y 404
         location = /50x.html {
             root /usr/share/nginx/html;
         }
@@ -34,3 +36,4 @@ http {
         }
     }
 }
+
