--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
 
         # Ruta para los archivos estáticos
         location / {
-            root /usr/share/nginx/html/cir-os/browser;  # Asegúrate de que esta ruta sea correcta
+            root /usr/share/nginx/html;  # Asegúrate de que esta ruta sea correcta
             index index.html index.htm;
             
             # Si no se encuentra el archivo, redirige al index.html (para SPA)
